# OpenManzai

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  README.md  THIRDPARTYLICENSES.TXT
cmake/: FindSDL2.cmake  FindSDL2_IMAGE.cmake
docs/: Contributing.md  Contributors.md
examples/: CMakeLists.txt
examples/PPT_Intro/: CMakeLists.txt
examples/PPT_Intro/src/: PPT_Intro.c  PPT_Intro.cpp
examples/src/: testlib1.cpp
openmanzai/: CMakeLists.txt
openmanzai/include/: OpenManzai.h  OpenManzai_background.h  OpenManzai_object.h  OpenManzai_sprite.h
openmanzai/src/: OpenManzai.c  OpenManzai_background.c  OpenManzai_character.c  OpenManzai_object.c  OpenManzai_sprite.c
openmanzi/: CMakeLists.txt
openmanzi/include/: OpenManzi.h  OpenManzi_sprite.h  openmanzi.h  sprite.h
openmanzi/src/: OpenManzi.c  OpenManzi_sprite.c  openmanzi.c  resource_path.c  resource_path.h  sprite.c
